Fix project img moving out of screen as told by Leo Cheron

--- a/public/main.css
+++ b/public/main.css
@@ -363,8 +363,8 @@ pre {
     margin-top: 0;
   }
 }
-.project canvas {
-  position: absolute;
+.gl-project-hover {
+  position: fixed;
   top: 0px;
   left: 0px;
   z-index: -1;
