--- a/styles/pages/home/_projects.scss
+++ b/styles/pages/home/_projects.scss
@@ -13,8 +13,8 @@
     }
 }
 
-.project canvas {
-    position: absolute;
+.gl-project-hover {
+    position: fixed;
     top: 0px;
     left: 0px;
     z-index: -1;
